# nix-runner

./: Cargo.toml  flake.nix
rust-src/: main.rs
rust-src/lib/: parser.rs
