[package]
name = "nix-runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "nix_runner"
path = "rust-src/lib/mod.rs"

[[bin]]
name = "nix-runner"
path = "rust-src/main.rs"

[dependencies]
clap = { version = "4.0.24", features = ["cargo"]}
nom = { version = "7.1.1" }
